# platform.core.api.usb-accessory

./: AUTHORS  CMakeLists.txt  capi-system-usb-accessory.pc.in  project.config
TC/: config
TC/testcase/: Makefile  tslist
debian/: capi-system-usb-accessory.install  changelog  control  rules
include/: usb_accessory.h  usb_accessory_private.h
packaging/: capi-system-accessory.spec  capi-system-usb-accessory.changes  capi-system-usb-accessory.spec
src/: usb_accessory.c  usb_accessory_private.c
test/: CMakeLists.txt  acc_test.c  acc_test.desktop.in  acc_test.xml
test/debian/: acc_test.install  changelog  control  rules
test/packaging/: acc-test.spec  acc_test.spec
